--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Arquivos e diretórios do projeto
+/input_folder
+/output_folder
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
